<resources>
    <string name="app_name">Salud Integral</string>
    <string name="seccion_social">"Salud Psicosocial"</string>
    <string name="seccion_salud">"Salud Física"</string>
    <string name="seccion_cognicnion">"Activación Cognitiva"</string>
    <string name="seccion_espiritualidad">"Salud Espiritual"</string>
    <string name="seccion_perfil">"Perfil"</string>
    <string name="seccion_emepzaredicion">"Editar datos"</string>
    <string name="getFecha">"Seleccionar Fecha"</string>
    <string name="getHora">"Seleccionar Hora"</string>
    <string name="activity_registro_TomarFoto">Tomar Foto</string>
    <string name="activity_registro_MensajeInicial">"Regístrate para comenzar a usar la aplicación"</string>
    <string name="activity_registro_nombre">Nombre</string>
    <string name="activity_registro_nombre_hint">Escribe tu nombre</string>
    <string name="activity_registro_apodo">Apellido</string>
    <string name="activity_registro_apodo_hint">Escribe tu apellido</string>
    <string name="activity_registro_FechaNacimiento">Fecha de nacimiento</string>
    <string name="activity_registro_FechaNacimiento_hint">Elige tu fecha de nacimiento</string>
    <string name="activity_registro_pais">"País"</string>
    <string name="activity_registro_pais_hint">"Escribe tu país"</string>
    <string name="activity_registro_ciudad">Estado/Provincia</string>
    <string name="activity_registro_ciudad_hint">Escribe tu ciudad</string>
    <string name="activity_registro_Continuar">Continuar</string>
    <string name="fragment_tomar_medicamento_ingerido">"Ya la ingerí"</string>
    <string name="fragment_tomar_medicamento_eliminar">Eliminar</string>
    <string name="fragment_addmedicamento_nombreMed">"Nombre:"</string>
    <string name="fragment_addmedicamento_gramajeMed">"Gramaje (g/m^2):"</string>
    <string name="fragment_addmedicamento_cantidadMed">"Cantidad a ingerir por recordatorio:"</string>
    <string name="fragment_addmedicamento_periodicidadMed">"Periodicidad:"</string>
    <string name="fragment_addmedicamento_horaMed">"Hora de ingesta:"</string>
    <string name="fragment_addmedicamento_cadaCuandoMed">"Cada cuántas horas se ingiere el medicamento:"</string>
    <string name="fragment_addmedicamento_comienzoMed">"Fecha de inicio:"</string>
    <string name="fragment_addmedicamento_terminoMed">"Fecha de término:"</string>
    <string name="fragment_addmedicamento_ingerirAntesDespuesMed">"Ingerir medicamento antes/después de comer"</string>
    <string name="fragment_addmedicamento_fotoMed">"Agregar foto"</string>
    <string name="fragment_addmedicamento_addMed">"Guardar"</string>
    <string name="fragment_addmedicamento_antes">"Antes"</string>
    <string name="fragment_addmedicamento_despues">"Después"</string>
    <string name="fragment_addmedicamento_noAplica">"No Aplica"</string>
    <string name="fragment_addmedicamento_hint_nombreMed">"(ej. Paracetamol)"</string>
    <string name="fragment_addmedicamento_hint_gramajeMed">"(ej. 10.5)"</string>
    <string name="fragment_addmedicamento_hint_cantidadMed">"(ej. 2)"</string>
    <string name="fragment_addmedicamento_hint_horaMed">"(ej. 13:50)"</string>
    <string name="fragment_addmedicamento_hint_cadaCuantoMed">"(ej. 3)"</string>
    <string name="fragment_addmedicamento_hint_comienzoMed">"(ej. 26-03-2018, DD-MM-AAAA)"</string>
    <string name="fragment_addmedicamento_hint_terminoMed">"(ej. 04-12-2018, DD-MM-AAAA)"</string>
    <string name="fragment_addmedicamento_lunes">"Lunes"</string>
    <string name="fragment_addmedicamento_martes">"Martes"</string>
    <string name="fragment_addmedicamento_miercoles">"Miércoles"</string>
    <string name="fragment_addmedicamento_jueves">"Jueves"</string>
    <string name="fragment_addmedicamento_viernes">"Viernes"</string>
    <string name="fragment_addmedicamento_sabado">"Sábado"</string>
    <string name="fragment_addmedicamento_domingo">"Domingo"</string>
    <string name="fragment_calendario_add">"Añadir Evento"</string>
    <string name="fragment_calendario_addCumple">"Añadir Cumpleaños"</string>
    <string name="fragment_eventodisplay_cerrar">"Cerrar"</string>
    <string name="fragment_eventodisplay_eliminarTodosEventos">"Eliminar todos los eventos"</string>
    <string name="fragment_eventodisplay_eliminar">"Eliminar eventos seleccionados"</string>
    <string name="fragment_addevento_nombre">"Nombre: "</string>
    <string name="fragment_addevento_hint_nombre">"Inserte el nombre del evento."</string>
    <string name="fragment_addevento_descripcion">"Descripción: "</string>
    <string name="fragment_addevento_hint_descripcion">"Inserte la descripción del evento."</string>
    <string name="fragment_addevento_fecha">"Fecha: "</string>
    <string name="fragment_addevento_periodicidad">"Periodicidad: "</string>
    <string name="fragment_addevento_hint_periodicidad">"¿Se repite? "</string>
    <string name="fragment_addevento_tipo">"Tipo: "</string>
    <string name="fragment_addevento_semanas">"Número de semanas: "</string>
    <string name="fragment_addevento_hint_semanas">"(ej. 2)"</string>
    <string name="fragment_addevento_registrar">"Registrar evento"</string>
    <string name="row_evento_nombre">"Nombre del evento: "</string>
    <string name="row_evento_descripcion">"Descripción: "</string>
    <string name="row_cumpleano_nombre">"Cumpleañero: "</string>
    <string name="row_cumpleano_telefono">"Teléfono: "</string>
    <string name="row_cumpleano_marcar">"Marcar"</string>
    <string name="fragment_eventozoom_fecha">"Fecha: "</string>
    <string name="fragment_eventozoom_tipo">"Tipo: "</string>
    <string name="fragment_tomarmed_status">"Estatus: "</string>
    <string name="fragment_tomarmed_ingesta">"Ingesta: "</string>
    <string name="fragment_tomarmed_cantidad">"Cantidad: "</string>
    <string name="fragment_eventozoom_eliminar">"Eliminar"</string>
    <string name="fragment_eventoszoom_eliminar">"Eliminar todas las ocurrencias"</string>
    <string name="fragment_listcumpleanos_vacio">"No hay más cumpleaños registrados."</string>
    <string name="fragment_listeventos_vacio">"No hay más eventos registrados."</string>
    <string name="fragment_listcontactos_vacio">"No hay contactos registrados."</string>
    <string name="fragment_listmeds_vacio">"No hay medicamentos registrados."</string>
    <string name="fragment_cumpleanozoom_fecha">"Fecha: "</string>
    <string name="fragment_monisueño_hint">"(ej. 7.5)"</string>
    <string name="fragment_addcumple_hint_nombre">"Ingrese el nombre del cumpleañero."</string>
    <string name="fragment_addcumple_add">"Registrar cumpleaños"</string>
    <string name="fragment_addcumple_telefono_hint">"Ingrese el teléfono del cumpleañero."</string>
    <string name="fragment_addcumple_telefono">"Teléfono:"</string>
    <string name="channel_name">"MiCanal"</string>
    <string name="channel_description">"Este es mi canal"</string>
    <string name="InfoPersonal">Información Personal:</string>
    <string name="editar">Guardar Cambios</string>
    <string name="HistorialMedicamentos">Historial Medicamentos</string>
    <string name="BitacoraEventos">"Bitácora Eventos"</string>
    <string name="fragment_perfil_fecha">Fecha de nacimiento:</string>
    <string name="fragment_perfil_pais">"Pais:"</string>
    <string name="fragment_perfil_ciudad">Estado/Provincia:</string>
    <string name="fragment_perfil_apellido">Apellido:</string>
    <string name="fragment_perfil_nombre">Nombre:</string>
    <string name="fragment_perfil_botonFoto">Nueva foto</string>
    <string name="fragment_historial_nombremed">Nombre del medicamento:</string>
    <string name="fragment_historial_fecha">Fecha de ingesta:</string>
    <string name="fragment_historial_atiempo">Tomado a tiempo:</string>
    <string name="fragment_bitacora_todo">Todo</string>
    <string name="fragment_bitacora_salud">Salud</string>
    <string name="fragment_bitacora_social">Social</string>
    <string name="fragment_bitacora_cognicion">Cognitivo</string>
    <string name="fragment_bitacora_espiritual">Espiritual</string>
    <string name="fragment_bitacora_t1">Nombre:</string>
    <string name="fragment_bitacora_t2">Tipo:</string>
    <string name="fragment_bitacora_t3">Fecha:</string>
    <string name="fragment_bitacora_t4">Descripción:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PerfilMonitoreo">Monitoreo sueño</string>
    <string name="fragment_monitoreo_fecha">Fecha registrada:</string>
    <string name="fragment_monitoreo_horas">Horas de sueño:</string>
    <string name="fragment_contacto_add">Añadir contacto</string>
    <string name="add_contacto_telefono">"Teléfono: "</string>
    <string name="add_contacto_nombre">Nombre: </string>
    <string name="hint_registro">Nombre de Contacto</string>
    <string-array name="estados_estados_unidos">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="estados_guatemala">
        <item>Alta Verapaz</item>
        <item>Baja Verapaz</item>
        <item>Chimaltenango</item>
        <item>Chiquimula</item>
        <item>Petén</item>
        <item>El Progreso</item>
        <item>Quiché</item>
        <item>Escuintla</item>
        <item>Guatemala</item>
        <item>Huehuetenango</item>
        <item>Izabal</item>
        <item>Jalapa</item>
        <item>Jutiapa</item>
        <item>Quetzaltenango</item>
        <item>Retalhuleu</item>
        <item>Sacatepéquez</item>
        <item>San Marcos</item>
        <item>Santa Rosa</item>
        <item>Sololá</item>
        <item>Suchitepéquez</item>
        <item>Totonicapán</item>
        <item>Zacapa</item>
    </string-array>
</resources>