<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_addevento_nombre" />

        <EditText
            android:id="@+id/et_fragment_addcumpleanos_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/fragment_addcumple_hint_nombre" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_eventozoom_fecha" />

        <EditText
            android:id="@+id/et_fragment_addcumpleanos_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:hint="@string/fragment_addmedicamento_hint_comienzoMed" />

        <Button
            android:id="@+id/btn_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getFecha" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_addcumple_telefono" />

        <EditText
            android:id="@+id/et_fragment_addcumpleanos_teléfono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/fragment_addcumple_telefono_hint" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_addevento_tipo" />

        <EditText
            android:id="@+id/et_fragment_addcumpleanos_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_fragment_addcumpleanos_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_addcumple_add" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>