<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/btn_bitacora_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_todo"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_bitacora_salud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_salud"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_bitacora_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_social" />

            <Button
                android:id="@+id/btn_bitacora_cognicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_cognicion"
                android:textSize="9sp" />

            <Button
                android:id="@+id/btn_bitacora_espiritual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_espiritual"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_t1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_t2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_t3"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_bitacora_t4"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_bitacora"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>