<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_bitacora_nombre"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_bitacora_t1" />

        <TextView
            android:id="@+id/tv_bitacora_tipo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_bitacora_t2" />

        <TextView
            android:id="@+id/tv_bitacora_fecha"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_bitacora_t3" />

        <TextView
            android:id="@+id/tv_bitacora_descripcion"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_bitacora_t4"
            android:paddingStart="3dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>