<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_cumpleano_nombre" />

        <TextView
            android:id="@+id/tv_fragmentozoom_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row_cumpleano_telefono" />

        <TextView
            android:id="@+id/tv_fragmentozoom_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_eventozoom_fecha" />

        <TextView
            android:id="@+id/tv_fragmentozoom_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_eventozoom_tipo" />

        <TextView
            android:id="@+id/tv_fragmentozoom_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_eventozoom_eliminarEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_eventozoom_eliminar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_eventozoom_cerrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_eventodisplay_cerrar" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>